--- a/output.html
+++ b/output.html
@@ -5,8 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PROJET</title>
+    <link rel="stylesheet" href="./assets/css/app.css" />
+
+    <!-- Iclusion de JQUERY -->
+    <script
+      src="https://code.jquery.com/jquery-3.6.4.min.js"
+      integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
+      crossorigin="anonymous"
+      defer
+    ></script>
+
+    <!-- Inclusion du JS -->
+    <script src="./assets/js/app.js" defer></script>
   </head>
   <body>
-    <!-- Fichier de rendu du CV importe en XML-->
+    <div class="container mt-5">
+      <h1 class="title">Application de gestion de CV</h1>
+
+      <div class="card">
+        <div class="card-header">
+          <h3 class="card-title">Information personnelles</h3>
+        </div>
+        <div class="card-body">
+          <ul>
+            <li>
+              <div>Nom</div>
+              <div>Takam</div>
+            </li>
+            <li>
+              <div>Prénom</div>
+              <div>Rushclin</div>
+            </li>
+            <li>
+              <div>Email</div>
+              <div>takamrushclin@gmail.com</div>
+            </li>
+            <li>
+              <div>Télephone</div>
+              <div>690139728</div>
+            </li>
+            <li>
+              <div>Entreprise</div>
+              <div>A.S.</div>
+            </li>
+          </ul>
+        </div>
+        <div class="card-footer"></div>
+      </div>
+      <div class="card">
+        <h1 class="card-grd-title">Experiences professionelles</h1>
+
+        <div class="card"></div>
+      </div>
+    </div>
   </body>
 </html>
